@@ -20,6 +20,7 @@ package co.elastic.apm.agent.errorlogging;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.apache.logging.log4j.MarkerManager;
 import org.apache.logging.log4j.message.ParameterizedMessageFactory;
 import org.junit.jupiter.api.Test;
 
@@ -28,15 +29,20 @@ class Log4j2LoggerErrorCapturingInstrumentationTest extends AbstractErrorLogging
     private static final Logger logger = LogManager.getLogger(Log4j2LoggerErrorCapturingInstrumentationTest.class);
 
     @Test
-    void captureExceptionWithStringMessage() {
+    void captureErrorExceptionWithStringMessage() {
         logger.error("exception captured", new RuntimeException("some business exception"));
         verifyThatExceptionCaptured(1, "some business exception", RuntimeException.class);
     }
 
+    @Test
+    void captureErrorExceptionWithMessageMessage() {
+        logger.error(ParameterizedMessageFactory.INSTANCE.newMessage("exception captured with parameter {}", "foo"), new RuntimeException("some business exception"));
+        verifyThatExceptionCaptured(1, "some business exception", RuntimeException.class);
+    }
 
     @Test
-    void captureExceptionWithMessageMessage() {
-        logger.error(ParameterizedMessageFactory.INSTANCE.newMessage("exception captured with parameter {}", "foo"), new RuntimeException("some business exception"));
+    void captureFatalException() {
+        logger.fatal("exception captured", new RuntimeException("some business exception"));
         verifyThatExceptionCaptured(1, "some business exception", RuntimeException.class);
     }
 }
